# RenderingTutorials

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat
3rdlibs/: CMakeLists.txt
3rdlibs/fmt/: .clang-format  CMakeLists.txt  ChangeLog.rst  LICENSE.rst  README.rst
3rdlibs/fmt/.github/workflows/: doc.yml  linux.yml  macos.yml  windows.yml
3rdlibs/fmt/doc/: api.rst  build.py  contents.rst  fmt.less  index.rst  syntax.rst  usage.rst
3rdlibs/fmt/doc/_static/: breathe.css
3rdlibs/fmt/doc/basic-bootstrap/: README
3rdlibs/fmt/doc/bootstrap/: alerts.less  badges.less  bootstrap.less  breadcrumbs.less  button-groups.less  buttons.less  carousel.less  close.less  code.less  component-animations.less  dropdowns.less  forms.less  glyphicons.less  grid.less  input-groups.less  jumbotron.less  labels.less  list-group.less  media.less  mixins.less  modals.less  navbar.less  navs.less  normalize.less  pager.less  pagination.less  panels.less  popovers.less  print.less  progress-bars.less  responsive-embed.less  (+10 more)
3rdlibs/fmt/support/: Android.mk  AndroidManifest.xml  C++.sublime-syntax  README  Vagrantfile  appveyor.yml  build.gradle
3rdlibs/fmt/test/: format  format-test.cc
3rdlibs/glad-0.1.34/: Config.cmake.in  LICENSE  MANIFEST.in
3rdlibs/glad-0.1.34/src/: glad.c
3rdlibs/glfw-3.3.4/docs/: CODEOWNERS  build.dox  extra.css.map  extra.scss  input.dox  moving.dox  news.dox  quick.dox  vulkan.dox  window.dox
3rdlibs/glfw-3.3.4/src/: cocoa_init.m  cocoa_monitor.m  cocoa_window.m  nsgl_context.m
3rdlibs/glm-0.9.9.8/: .appveyor.yml  .travis.yml
3rdlibs/glm-0.9.9.8/test/: glm.cppcheck
3rdlibs/glm-0.9.9.8/util/: glm.natvis
3rdlibs/rpavlik-cmake-modules-3933abd/: AboutTheseModules.cmake  BoostTestTargets.cmake  BundleOSGPlugins.cmake  BundleOSGRuntime.cmake  BundleVRJ22Runtime.cmake  BundleVRJ30Runtime.cmake  CheckMacHIDAPI.cmake  CheckVersion.cmake  CleanDirectoryList.cmake  CleanLibraryList.cmake  CompatibilityVersionFile-BASIC.cmake.in  CompatibilityVersionFile-CXX_ABI.cmake.in  CompatibilityVersionFile-CXX_LAYOUT.cmake.in  CompatibilityVersionFile-C_ABI.cmake.in  CopyImportedTarget.cmake  CopyResourcesToBuildTree.cmake  CppcheckTargets.cmake  CreateDashboardScripts.cmake  CreateImportedTarget.cmake  CreateLaunchers.cmake  DashboardScript.cmake.in  DoxygenTargets.cmake  DoxygenTargets.doxyfile.in  EnableExtraCompilerWarnings.cmake  EnableProfiling.cmake  FileCopyTargets.cmake  FindALUT.cmake  FindAdrienne.cmake  FindBluez.cmake  FindCPPDOM.cmake  FindCXXGSL.cmake  FindColibriApi.cmake  FindDCubed.cmake  FindDirectShow.cmake  FindDirectX.cmake  FindFlagpoll.cmake  FindGDB.cmake  FindGHOST.cmake  FindGLEW.cmake  FindGLUI.cmake  (+112 more)
3rdlibs/rpavlik-cmake-modules-3933abd/.reuse/: dep5
3rdlibs/rpavlik-cmake-modules-3933abd/cmake-2.8.12-modules/: CMakePackageConfigHelpers.cmake  CMakeParseArguments.cmake
3rdlibs/rpavlik-cmake-modules-3933abd/cmake-2.8.3-modules/: FixWinInstallPrefix.cmake  autoinclude.cmake
3rdlibs/rpavlik-cmake-modules-3933abd/cmake-2.8.4-modules/: ImproveEclipseGCCErrors.cmake  autoinclude.cmake
3rdlibs/rpavlik-cmake-modules-3933abd/cmake-3.2.0-modules/: FindGit.cmake
3rdlibs/rpavlik-cmake-modules-3933abd/cmake-3.3.0-modules/: WriteCompilerDetectionHeader.cmake
3rdlibs/rpavlik-cmake-modules-3933abd/cmake-4.0.0-modules/: RequireOutOfSourceBuild.cmake  autoinclude.cmake
3rdlibs/rpavlik-cmake-modules-3933abd/launcher-templates/: genericlauncher.cmd.in  genericlauncher.sh.in  launcher.env.cmd.in  launcher.env.sh.in  perconfig.vcproj.user.in  perconfig.vcxproj.user.in  targetlauncher.cmd.in  targetlauncher.sh.in  vcproj.user.in  vcxproj.user.in
3rdlibs/rpavlik-cmake-modules-3933abd/module-docs/: AllModuleDependencies.dot  AllModuleDependencies.pdf.license  Example-FindMyPackage-UsingImportedTargets.cmake  Example-FindMyPackage.cmake  Example-FindMySimplePackage.cmake
3rdlibs/rpavlik-cmake-modules-3933abd/package/: fixupbundle.cmake.in
Learn-OpenGL-programming/: CMakeLists.txt  README.md
Learn-OpenGL-programming/tutorial01_create_empty_window/include/: tutorial01.h
Learn-OpenGL-programming/tutorial01_create_empty_window/src/: tutorial01_main.cpp
Learn-OpenGL-programming/tutorial02_draw_triangle/include/: shader.h
Learn-OpenGL-programming/tutorial02_draw_triangle/shaders/: static.frag  static.vert
Learn-OpenGL-programming/tutorial02_draw_triangle/src/: shader.cpp  tutorial02_main.cpp
Learn-OpenGL-programming/tutorial03_draw_rectangle/src/: tutorial03_main.cpp
Learn-OpenGL-programming/tutorial04_draw_hexagon/include/: my_lib.h  my_lib.inl
Learn-OpenGL-programming/tutorial04_draw_hexagon/shaders/: static.frag  static.vert
Learn-OpenGL-programming/tutorial04_draw_hexagon/src/: my_lib.cpp  tutorial04_main.cpp
Learn-OpenGL-programming/tutorial05_draw_cube/include/: my_lib.h  my_lib.inl
Learn-OpenGL-programming/tutorial05_draw_cube/shaders/: static.frag  static.vert
Learn-OpenGL-programming/tutorial05_draw_cube/src/: my_lib.cpp  tutorial05_main.cpp
Learn-OpenGL-programming/tutorial06_draw_pyramid/src/: tutorial06_main.cpp
Learn-OpenGL-programming/tutorial07_blend_textures/: CMakeLists.txt
Learn-OpenGL-programming/tutorial07_blend_textures/include/: my_lib.h  shader.h
Learn-OpenGL-programming/tutorial07_blend_textures/shaders/: static.frag  static.vert
Learn-OpenGL-programming/tutorial07_blend_textures/src/: my_lib.cpp  shader.cpp  tutorial07_main.cpp
(+78 files in other folders)
